# agentic-pathology-workshop

./: .editorconfig  .gitattributes  .gitignore  API_Summit_Workshop_2026_Proposal_Agentic.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements-scenarios.txt  requirements.txt
.devcontainer/: Dockerfile.devshell  README.md  devcontainer.json  docker-compose.yml  onCreateCommand.sh  postCreateCommand.sh  postStartCommand.sh
data/: README.md
data/scenario_a/: clinvar_cache.csv  gnomad_cache.csv  patient_phenotype.csv  pubmed_cache.csv  variants.csv
data/scenario_b/: current_request.csv  ground_truth.csv  notes.csv
data/scenario_c/: case_queue.json  cases.csv  instruments.csv  instruments.json  pathologists.csv  pathologists.json  workload_history.csv  workload_history.json
data/scenario_d/: README.md  ground_truth.csv  sample_1_extracted.json  sample_1_raw_text.txt  sample_2_extracted.json  sample_2_raw_text.txt  sample_3_extracted.json  sample_3_raw_text.txt
docs/: README.md  attendee_handbook.html  attendee_handbook.md  troubleshooting.md  who5e_instructions.md
docs/slides/: README.md  slide_specs.md  (+2 more)
langflow_flows/: 00_smoke.json  0_general_chatbot.json  0_naive_integrated_chatbot.json  A_variant_tournament.json  B_longitudinal_ghost.json  C_digital_thread_v2.json  D_integrated_report_to_who.json  README.md  Research_Buddy.json  chatbot.json  extras_case_routing.json  extras_longitudinal_notes.json  extras_variant_tournament.json  extras_wikipedia_agent.json  pathology_report_integration.json
proxy/: Dockerfile  README.md  requirements.txt  tokens.json.example
scripts/: README.md  build_chatbot_flow.py  build_extras_case_routing_flow.py  build_extras_longitudinal_notes_flow.py  build_extras_variant_tournament_flow.py  build_extras_wikipedia_agent_flow.py  build_pathology_report_integration_flow.py  build_research_buddy_flow.py  build_scenario_a_v2_flow.py  build_scenario_b_v2_flow.py  build_scenario_c_v2_flow.py  build_scenario_d_v2_flow.py  build_scenario_zero_flow.py  build_slide_diagrams.py  build_slides.sh  import_workshop_flows.sh  provision_workshop_users.py  reset_attendee.py  run_smoke_via_api.py  seed_data.py  smoke_phoenix.py  verify_attendee_codespace.sh
tests/: README.md
tools/: README.md
(+136 files in other folders)
