[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pathology-tools"
version = "0.1.0"
description = "Python tools for the API Summit 2026 agentic pathology workshop"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hesam Hakim", email = "hesamhakim@gmail.com" }]

dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "openai>=1.50",
    "cyvcf2>=0.30",
    "phoenix-otel",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-openai",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tools", "proxy/tests", "tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
