[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-pathology-tools"
version = "0.1.0"
description = "Python tools for the API Summit 2026 agentic pathology workshop"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Hesam Hakim", email = "hesamhakim@gmail.com" }]

# Runtime deps live in requirements.txt (the umbrella pin file) so the devshell
# and CI can install them with one `pip install -r requirements.txt`. The package
# itself just declares the layout; `pip install -e .` makes `import tools.*` work.
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tools", "proxy/tests", "tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
